--- a/.github/workflows/blog-deployment.yml
+++ b/.github/workflows/blog-deployment.yml
@@ -21,9 +21,11 @@ jobs:
         node-version: '18'
 
     - name: Install dependencies
+      working-directory: ./opensaas-sh/blog
       run: npm install
 
     - name: Build site
+      working-directory: ./opensaas-sh/blog
       run: npm run build
 
     - name: Deploy to Netlify
