--- a/template/app/package.json
+++ b/template/app/package.json
@@ -18,6 +18,8 @@
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.11",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "react-apexcharts": "1.4.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
