--- a/opensaas-sh/blog/package.json
+++ b/opensaas-sh/blog/package.json
@@ -15,6 +15,7 @@
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.15",
+    "prettier": "^3.4.2",
     "sharp": "^0.32.5",
     "starlight-blog": "^0.15.0",
     "typescript": "^5.4.5"
