--- a/template/app/package.json
+++ b/template/app/package.json
@@ -13,6 +13,8 @@
     "apexcharts": "3.41.0",
     "clsx": "^2.1.0",
     "headlessui": "^0.0.0",
+    "i18next": "^24.1.0",
+    "i18next-browser-languagedetector": "^8.0.2",
     "node-fetch": "3.3.0",
     "openai": "^4.55.3",
     "prettier": "3.1.1",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.26.2",
     "react-apexcharts": "1.4.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.2.0",
     "react-icons": "4.11.0",
     "stripe": "11.15.0",
     "tailwind-merge": "^2.2.1",
