--- a/template/app/package.json
+++ b/template/app/package.json
@@ -27,7 +27,8 @@
     "tailwind-merge": "^2.2.1",
     "vanilla-cookieconsent": "^3.0.1",
     "wasp": "file:.wasp/out/sdk/wasp",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
