Add more detail about SKIP_EMAIL_VERIFICATION_IN_DEV to e2e tests README
Fixes #363

Add `SKIP_EMAIL_VERIFICATION_IN_DEV=true` to `template/app/.env.server.example` file.

* Add a new section to the file to skip email verification in development mode.
* Add `SKIP_EMAIL_VERIFICATION_IN_DEV=true` to the new section.

--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -54,3 +54,6 @@ AWS_S3_IAM_ACCESS_KEY=ACK...
 AWS_S3_IAM_SECRET_KEY=t+33a...
 AWS_S3_FILES_BUCKET=your-bucket-name
 AWS_S3_REGION=your-region
+
+# Skip email verification in development mode
+SKIP_EMAIL_VERIFICATION_IN_DEV=true
