--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -56,4 +56,4 @@ AWS_S3_FILES_BUCKET=your-bucket-name
 AWS_S3_REGION=your-region
 
 # Skip email verification in development mode
-SKIP_EMAIL_VERIFICATION_IN_DEV=true
+# SKIP_EMAIL_VERIFICATION_IN_DEV=true
