--- a/template/app/package.json
+++ b/template/app/package.json
@@ -28,6 +28,9 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.2.7",
     "vanilla-cookieconsent": "^3.0.1",
+    "react-error-boundary": "^3.1.4",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.7.0",
     "wasp": "file:.wasp/out/sdk/wasp",
     "zod": "^3.23.8"
   },
