fix: adjust stats and payment updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "express-rate-limit": "^7.5.0",
-    "helmet": "^8.1.0"
+    "helmet": "^8.1.0",
+    "cors": "^2.8.5"
+  }
+  ,
+  "devDependencies": {
+    "@types/cors": "^2.8.16"
   }
 }
