--- a/template/app/package.json
+++ b/template/app/package.json
@@ -24,7 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
     "react-router-dom": "^6.26.2",
-    "stripe": "^18.1.0",
+    "stripe": "18.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.2.7",
     "vanilla-cookieconsent": "^3.0.1",
