--- a/template/app/package.json
+++ b/template/app/package.json
@@ -7,8 +7,14 @@
     "@aws-sdk/s3-request-presigner": "^3.523.0",
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
+    "@hookform/resolvers": "^5.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "apexcharts": "3.41.0",
@@ -23,6 +29,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
     "react-router-dom": "^6.26.2",
@@ -32,7 +39,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vanilla-cookieconsent": "^3.0.1",
     "wasp": "file:.wasp/out/sdk/wasp",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@faker-js/faker": "8.3.1",
