fix: implement webhook handling
- Add type-safety to webhook handler
- Apply current Wasp env var validation

--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -3,6 +3,9 @@
 # If you use `wasp start db` then you DO NOT need to add a DATABASE_URL env variable here.
 # DATABASE_URL=
 
+# Supports Stripe, LemonSqueezy, Polar
+PAYMENT_PROCESSOR_ID=Stripe
+
 # For testing, go to https://dashboard.stripe.com/test/apikeys and get a test stripe key that starts with "sk_test_..."
 STRIPE_API_KEY=sk_test_...
 # After downloading starting the stripe cli (https://stripe.com/docs/stripe-cli) with `stripe listen --forward-to localhost:3001/payments-webhook` it will output your signing secret
@@ -16,6 +19,17 @@ LEMONSQUEEZY_API_KEY=eyJ...
 LEMONSQUEEZY_STORE_ID=012345
 # define your own webhook secret when creating a new webhook on https://app.lemonsqueezy.com/settings/webhooks
 LEMONSQUEEZY_WEBHOOK_SECRET=my-webhook-secret
+
+# After creating an organization, you can find your organization id in the organization settings https://sandbox.polar.sh/dashboard/[your org slug]/settings
+POLAR_ORGANIZATION_ID=00000000-0000-0000-0000-000000000000
+# Generate a token at https://sandbox.polar.sh/dashboard/[your org slug]/settings
+POLAR_ACCESS_TOKEN=polar_oat_...
+# Define your own webhook secret when creating a new webhook at https://sandbox.polar.sh/dashboard/[your org slug]/settings/webhooks
+POLAR_WEBHOOK_SECRET=polar_whs_...
+# The unauthenticated URL is at https://sandbox.polar.sh/[your org slug]/portal
+POLAR_CUSTOMER_PORTAL_URL=https://sandbox.polar.sh/.../portal
+# For production, set this to false, then generate a new organization and products from the live dashboard
+POLAR_SANDBOX_MODE=true
 
 # If using Stripe, go to https://dashboard.stripe.com/test/products and click on + Add Product
 # If using Lemon Squeezy, go to https://app.lemonsqueezy.com/products and create new products and variants
