--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -1,7 +1,10 @@
-# NOTE: you can let Wasp set up your Postgres DB by running `wasp start db` in a separate terminal window. 
+# NOTE: you can let Wasp set up your Postgres DB by running `wasp start db` in a separate terminal window.
 # then, in a new terminal window, run `wasp db migrate-dev` and finally `wasp start`.
 # If you use `wasp start db` then you DO NOT need to add a DATABASE_URL env variable here.
 # DATABASE_URL=
+#
+# # Set the payment processor to use: 'stripe', 'lemonsqueezy', or 'paddle' (defaults to 'stripe')
+PAYMENT_PROCESSOR=stripe
 
 # For testing, go to https://dashboard.stripe.com/test/apikeys and get a test stripe key that starts with "sk_test_..."
 STRIPE_API_KEY=sk_test_...
@@ -9,6 +12,13 @@ STRIPE_API_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 # You can find your Stripe customer portal URL in the Stripe Dashboard under the 'Customer Portal' settings.
 STRIPE_CUSTOMER_PORTAL_URL=https://billing.stripe.com/...
+
+# For testing with Paddle, create a sandbox account at https://sandbox-vendors.paddle.com
+PADDLE_API_KEY=test_...
+# Set up your webhook secret in Paddle Dashboard -> Developer Tools -> Notifications
+PADDLE_WEBHOOK_SECRET=pdl_...
+# Create a hosted checkout in Paddle Dashboard -> Checkout -> Hosted Checkout
+PADDLE_HOSTED_CHECKOUT_URL=https://sandbox-pay.paddle.io/hsc_...
 
 # For testing, create a new store in test mode on https://lemonsqueezy.com
 LEMONSQUEEZY_API_KEY=eyJ...
@@ -19,6 +29,7 @@ LEMONSQUEEZY_WEBHOOK_SECRET=my-webhook-secret
 
 # If using Stripe, go to https://dashboard.stripe.com/test/products and click on + Add Product
 # If using Lemon Squeezy, go to https://app.lemonsqueezy.com/products and create new products and variants
+# If using Paddle, go to https://sandbox-vendors.paddle.com/catalog and create your products and prices
 PAYMENTS_HOBBY_SUBSCRIPTION_PLAN_ID=012345
 PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID=012345
 PAYMENTS_CREDITS_10_PLAN_ID=012345
@@ -44,7 +55,7 @@ PLAUSIBLE_BASE_URL=https://plausible.io/api # if you are self-hosting plausible,
 
 # (OPTIONAL) get your google service account key at https://console.cloud.google.com/iam-admin/serviceaccounts
 GOOGLE_ANALYTICS_CLIENT_EMAIL=email@example.gserviceaccount.com
-# Make sure you convert the private key within the JSON file to base64 first with `echo -n "PRIVATE_KEY" | base64`. see the docs for more info. 
+# Make sure you convert the private key within the JSON file to base64 first with `echo -n "PRIVATE_KEY" | base64`. see the docs for more info.
 GOOGLE_ANALYTICS_PRIVATE_KEY=LS02...
 # You will find your Property ID in the Google Analytics dashboard. It will look like '987654321'
 GOOGLE_ANALYTICS_PROPERTY_ID=123456789
