--- a/template/app/package.json
+++ b/template/app/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "1.7.13",
     "@hookform/resolvers": "^5.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
+    "@paddle/paddle-node-sdk": "^3.2.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
