--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -28,8 +28,8 @@ LEMONSQUEEZY_STORE_ID=012345
 LEMONSQUEEZY_WEBHOOK_SECRET=my-webhook-secret
 
 # If using Stripe, go to https://dashboard.stripe.com/test/products and click on + Add Product
+# If using Paddle, go to https://vendors.paddle.com/catalog and create your products and prices
 # If using Lemon Squeezy, go to https://app.lemonsqueezy.com/products and create new products and variants
-# If using Paddle, go to https://sandbox-vendors.paddle.com/catalog and create your products and prices
 PAYMENTS_HOBBY_SUBSCRIPTION_PLAN_ID=012345
 PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID=012345
 PAYMENTS_CREDITS_10_PLAN_ID=012345
