--- a/opensaas-sh/app_diff/.env.client.diff
+++ b/opensaas-sh/app_diff/.env.client.diff
@@ -1,5 +1,6 @@
 --- template/app/.env.client
 +++ opensaas-sh/app/.env.client
-@@ -0,0 +1 @@
+@@ -0,0 +1,2 @@
++REACT_APP_GOOGLE_ANALYTICS_ID=G-H3LSJCK95H
 +REACT_APP_GOOGLE_ANALYTICS_ID=G-H3LSJCK95H
 \ No newline at end of file
