feat(UI):add language switcher

--- a/template/app/package.json
+++ b/template/app/package.json
@@ -26,6 +26,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "headlessui": "^0.0.0",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.525.0",
     "node-fetch": "3.3.0",
     "openai": "^4.55.3",
@@ -36,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.7.3",
     "react-router-dom": "^6.26.2",
     "stripe": "18.1.0",
     "tailwind-merge": "^2.2.1",
