--- a/template/app/tsconfig.json
+++ b/template/app/tsconfig.json
@@ -22,6 +22,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
     "allowJs": true,
+    "resolveJsonModule": true,
     "outDir": ".wasp/out/user"
   },
   "include": ["src"]
