--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-/template/app/migrations
-/template/app/package-lock.json
+# Dependencies
+node_modules/
+
+# MacOS-specific files.
 .DS_Store
 
-# Local Netlify folder
-.netlify
+# We want to keep the template clean from the usual build artifacts.
+template/app/migrations
+template/app/package-lock.json
