dont format md and mdx

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,5 +5,9 @@ dist/
 # OpenSaaS app diff folder.
 app_diff/
 
+# Formatting `.md` and `.mdx` can introduce logical changes.
+**/blog/**/*.md
+**/blog/**/*.mdx 
+
 # Ignore minified JS files in the public folder.
 **/public/**/*.js
