--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ node_modules/
 .DS_Store
 
 # We want to keep the template clean from the usual build artifacts.
+# We also don't want to ship this ignores to the users.
 template/app/migrations
 template/app/package-lock.json
