--- a/.github/workflows/template-release.yml
+++ b/.github/workflows/template-release.yml
@@ -6,6 +6,12 @@ name: Template Release
     tags:
       - 'wasp-v*-template'
 
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to release (e.g., wasp-v0.18-template)'
+        required: true
+
 permissions:
   contents: write
 
@@ -13,23 +19,29 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
+    env:
+      tag_name: ${{ inputs.tag || github.ref_name }}
+      archive_name: template.tar.gz
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+        with:
+          ref: ${{ env.tag_name}}
 
       - name: Create template archive
         working-directory: template
-        run: tar -czf ../template.tar.gz .
+        run: tar -czf "../$archive_name" .
 
       - name: Create draft release if it doesn't exist
         run: |
-          if ! gh release view "${GITHUB_REF_NAME}"; then
-            gh release create "${GITHUB_REF_NAME}" --draft
+          if ! gh release view "$tag_name"; then
+            gh release create "$tag_name" --draft
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload release asset
-        run: gh release upload "${GITHUB_REF_NAME}" template.tar.gz
+        run: gh release upload "$tag_name" "$archive_name"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
