--- a/.github/workflows/template-release.yml
+++ b/.github/workflows/template-release.yml
@@ -42,6 +42,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload release asset
-        run: gh release upload "$tag_name" "$archive_name"
+        run: gh release upload "$tag_name" "$archive_name" --clobber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
