--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # YENİ EKLENEN ADIM BURASI
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22' # Wasp'ın istediği 22.12.0 veya üstü bir versiyonu kuruyoruz.
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -19,7 +25,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # YENİ EKLENEN ADIM BURASI
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
