--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,11 +33,14 @@ jobs:
           curl -sSL https://get.wasp-lang.dev/installer.sh | sh
           wasp build
 
-      # YENİ EKLENEN ADIM BURASI GÜNCELLENDİ
+      # YENİ EKLENEN ADIM BURASI
+      - name: Fix Dockerfile by removing bundle script (Workaround)
+        run: |
+          sed -i '/npm run bundle/d' ./template/app/.wasp/build/Dockerfile
+
       - name: Prepare files for Docker build (Workaround)
         run: |
           mkdir -p ./template/app/db
-          # schema.prisma dosyası yoksa hata vermemesi için kontrol ekliyoruz
           if [ -f ./template/app/schema.prisma ]; then
             mv ./template/app/schema.prisma ./template/app/db/schema.prisma
           fi
