--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,10 +12,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -24,37 +22,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Build and push server Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: . # Bütün depoyu context olarak kullanıyoruz
+          file: ./Dockerfile.server # Yeni oluşturduğumuz Dockerfile'ı kullanıyoruz
+          push: true
+          tags: ghcr.io/hemidzada/opensaas-server:main
 
-      - name: Build Wasp app
+      - name: Build Wasp app for client
+        # Client dosyalarını oluşturmak için bu adıma hala ihtiyacımız var
         working-directory: ./template/app
         run: |
           curl -sSL https://get.wasp-lang.dev/installer.sh | sh
           wasp build
-
-      # YENİ EKLENEN ADIM BURASI
-      - name: Fix Dockerfile by removing bundle script (Workaround)
-        run: |
-          sed -i '/npm run bundle/d' ./template/app/.wasp/build/Dockerfile
-
-      - name: Prepare files for Docker build (Workaround)
-        run: |
-          mkdir -p ./template/app/db
-          if [ -f ./template/app/schema.prisma ]; then
-            mv ./template/app/schema.prisma ./template/app/db/schema.prisma
-          fi
-          mkdir -p ./template/app/server
-          mkdir -p ./template/app/sdk
-
-      - name: Build and push server Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./template/app
-          file: ./template/app/.wasp/build/Dockerfile
-          push: true
-          tags: ghcr.io/hemidzada/opensaas-server:main
-
+          
       - name: Create client Dockerfile
         run: |
           cat > client.Dockerfile <<EOF
