--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,16 +1,15 @@
 # Stage 1: Builder
 # Bu aşama, projenin bağımlılıklarını kurar ve derleme işlemini yapar.
-FROM node:22-alpine AS builder
+FROM node:22-slim AS builder # <--- ALPINE yerine SLIM kullanıyoruz.
 
-# Gerekli araçları en başta kuruyoruz.
-RUN apk add --no-cache curl
+# Gerekli araçları en başta kuruyoruz. (apk yerine apt-get)
+RUN apt-get update && apt-get install -y curl
 
 WORKDIR /app
 
 # Sadece proje kodlarını kopyala (gereksiz dosyaları alma)
 COPY ./template/app /app
 
-# --- YENİ VE DOĞRU SIRALAMA ---
 # ÖNCE projenin ana bağımlılıklarını kuruyoruz.
 RUN npm install
 
@@ -20,7 +19,6 @@ ENV PATH="/root/.local/bin:${PATH}"
 
 # EN SON projeyi derliyoruz.
 RUN wasp build
-# --------------------------------
 
 # Sunucu bağımlılıklarını kur
 RUN cd .wasp/build/server && npm install
@@ -30,7 +28,7 @@ RUN cd .wasp/build/server && npx prisma generate --schema='../db/schema.prisma'
 
 # Stage 2: Production
 # Bu aşama, sadece çalışmak için gerekli olan dosyaları alır ve küçük bir imaj oluşturur.
-FROM node:22-alpine AS production
+FROM node:22-slim AS production # <--- ALPINE yerine SLIM kullanıyoruz.
 WORKDIR /app
 
 # Sadece gerekli node_modules'ları builder aşamasından kopyala
