--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,24 +1,18 @@
 # Stage 1: Builder
-# Bu aşama, projenin bağımlılıklarını kurar ve derleme işlemini yapar.
 FROM node:22-slim AS builder
 
-# Gerekli araçları en başta kuruyoruz. (apk yerine apt-get)
 RUN apt-get update && apt-get install -y curl
 
 WORKDIR /app
 
-# Sadece proje kodlarını kopyala (gereksiz dosyaları alma)
 COPY ./template/app /app
 
-# ÖNCE projenin ana bağımlılıklarını kuruyoruz.
 RUN npm install
 
-# SONRA Wasp'ı kuruyoruz.
-RUN curl -sSL https://get.wasp-lang.dev/installer.sh | sh
-ENV PATH="/root/.local/bin:${PATH}"
-
-# EN SON projeyi derliyoruz.
-RUN wasp build
+# Wasp'ı kurup projeyi tek adımda derliyoruz.
+# Bu, PATH ve Node versiyonu sorunlarını kökünden çözer.
+RUN curl -sSL https://get.wasp-lang.dev/installer.sh | sh -s -- \
+    && /root/.local/bin/wasp build
 
 # Sunucu bağımlılıklarını kur
 RUN cd .wasp/build/server && npm install
@@ -27,7 +21,6 @@ RUN cd .wasp/build/server && npm install
 RUN cd .wasp/build/server && npx prisma generate --schema='../db/schema.prisma'
 
 # Stage 2: Production
-# Bu aşama, sadece çalışmak için gerekli olan dosyaları alır ve küçük bir imaj oluşturur.
 FROM node:22-slim AS production
 WORKDIR /app
 
@@ -48,5 +41,4 @@ ENV PORT=3001
 
 EXPOSE 3001
 
-# Uygulamayı başlat
 CMD ["node", "src/index.js"]
