--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # GÖZDEN KAÇAN VE GERİ EKLEDİĞİMİZ ADIM
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -25,13 +31,12 @@ jobs:
       - name: Build and push server Docker image
         uses: docker/build-push-action@v4
         with:
-          context: . # Bütün depoyu context olarak kullanıyoruz
-          file: ./Dockerfile.server # Yeni oluşturduğumuz Dockerfile'ı kullanıyoruz
+          context: .
+          file: ./Dockerfile.server
           push: true
           tags: ghcr.io/hemidzada/opensaas-server:main
 
       - name: Build Wasp app for client
-        # Client dosyalarını oluşturmak için bu adıma hala ihtiyacımız var
         working-directory: ./template/app
         run: |
           curl -sSL https://get.wasp-lang.dev/installer.sh | sh
