--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
           node-version: '22'
 
       - name: Set up Docker Buildx
-        uses: docker/setup-build-action@v3
+        uses: docker/setup-buildx-action@v2 # <--- DEĞİŞİKLİK BURADA
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -44,11 +44,7 @@ jobs:
         run: |
           curl -sSL https://get.wasp-lang.dev/installer.sh | sh
           wasp build
-      
-      # YENİ HATA AYIKLAMA ADIMI BURASI
-      - name: DEBUG - List generated files
-        run: ls -R
-
+          
       - name: Create client Dockerfile
         run: |
           cat > client.Dockerfile <<EOF
