--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,11 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -27,8 +22,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- 1. Sunucu (Server) Kurulumu ---
-      # Bu bölüm zaten çalışıyor ve stabildir.
+      # --- 1. Sunucu (Server) İmajını Build Et ve Pushla ---
+      # Bu adım aynı zamanda client dosyalarını da oluşturuyor.
       - name: Build and push server Docker image
         uses: docker/build-push-action@v4
         with:
@@ -37,33 +32,35 @@ jobs:
           push: true
           tags: ghcr.io/hemidzada/opensaas-server:main
 
-      # --- 2. İstemci (Client) Kurulumu ---
-      # Tüm adımları tek bir blokta birleştirerek klasör sorunlarını kökünden çözüyoruz.
+      # --- 2. Build Artifact'larını Çıkart ---
+      # Sunucu build'inin "builder" aşamasında oluşan dosyaları alıyoruz.
+      # Bu dosyaların içinde aradığımız client dosyaları da var.
+      - name: Extract build artifacts
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile.server
+          target: builder
+          outputs: type=local,dest=./build_output
+
+      # --- 3. İstemci (Client) İmajını Oluştur ve Pushla ---
+      # Artık ayrı bir "wasp build" adımımız yok.
       - name: Build and push client Docker image
         run: |
-          echo "--> 1. Navigating to the app directory..."
-          cd ./template/app
-
-          echo "--> 2. Installing npm dependencies..."
-          npm install
-
-          echo "--> 3. Installing Wasp and building the client..."
-          curl -sSL https://get.wasp-lang.dev/installer.sh | sh
-          /home/runner/.local/bin/wasp build
-          
-          echo "--> 4. Creating the client Dockerfile in the root..."
-          # Dockerfile'ı projenin ana dizininde oluşturuyoruz.
-          cat > ../../client.Dockerfile <<EOF
+          # Client için Dockerfile'ı oluşturuyoruz.
+          # Yolu, çıkarttığımız dosyalara göre ayarlıyoruz.
+          cat > client.Dockerfile <<EOF
           FROM nginx:alpine
-          COPY ./template/app/.wasp/build/web-app/build /usr/share/nginx/html
+          COPY ./app/.wasp/build/web-app/build /usr/share/nginx/html
           EOF
-          
-          echo "--> 5. Building and pushing the client image from the root..."
-          # Ana dizine geri dönüp, build komutunu oradan çalıştırıyoruz.
-          cd ../../
-          docker buildx build --file ./client.Dockerfile --tag ghcr.io/hemidzada/opensaas-client:main --push .
+
+          # Client imajını, çıkarttığımız dosyaları kullanarak build ediyoruz.
+          docker buildx build \
+            --file ./client.Dockerfile \
+            --tag ghcr.io/hemidzada/opensaas-client:main \
+            --push ./build_output
       
-      # --- 3. Coolify'i Tetikleme ---
+      # --- 4. Coolify'i Tetikleme ---
       - name: Trigger Coolify server deploy
         run: curl -X POST ${{ secrets.SERVER_COOLIFY_WEBHOOK }}
 
